Update to JAXB 2.3.1